--- a/frontend/src/scss/blocks/_product-card.scss
+++ b/frontend/src/scss/blocks/_product-card.scss
@@ -32,8 +32,6 @@
         right: 10px;
         cursor: pointer;
         transition: color ease-in 0.2s;
-        z-index: 100;
-        pointer-events: auto;
 
         svg {
             pointer-events: none;
